[tool.poetry]
name = "tubeLiveSaver"
version = "0.1.0"
description = ""
authors = ["Aliaksandr <apxont@disroot.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "tubelivesaver.main:start"
